[package]
name = "tweek"
description = "GUI library with tween animation"
version = "0.2.0-rc4"
authors = ["Hugh Lang <hughlang@gmail.com>"]
keywords = ["animation", "graphics", "gui"]
license = "LGPL"
readme = "README.md"
repository = "https://github.com/wasm-network/tweek-rust"
exclude = ["static/*"]
edition = "2018"

[lib]
name = "tweek"
path = "src/lib.rs"
crate-type = ["lib"]

[[example]]
name = "animate"
path = "examples/quicksilver/animate.rs"

[[example]]
name = "gui"
path = "examples/quicksilver/gui.rs"

[[example]]
name = "modals"
path = "examples/quicksilver/modals.rs"

[dependencies]
cgmath = "0.17.0"
log = "0.4"
lazy_static = "1.3.0"
unwrap_to = "0.1.0"
image = { version = "0.22", default-features = false, features = ["png_codec"] }
glyph_brush = "0.5"
float-cmp = "0.5"
# unicode-normalization = "0.1.8"
# approx = "0.3"
# euclid = "0.20"
# fnv = "1.0"

[dependencies.quicksilver]
default-features = false
features = ["fonts", "complex_shapes"]
path = "../quicksilver"
# git = "https://github.com/hughlang/quicksilver"
# branch = "modular_gl"

[dependencies.uuid]
version = "0.7"
features = ["v4", "stdweb"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
stdweb = "0.4.12"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.6"
color-backtrace = { version = "0.1" }

